Restoring right sidebar stickyness, refining cube ad mappings to prevent dfp calls from processing and displaying on mobile, wider taboola container

--- a/assets/css/scss/components/_post.scss
+++ b/assets/css/scss/components/_post.scss
@@ -289,9 +289,15 @@ article.post {
 		}
 	}
 
+	@media #{$large-range} {
+		.taboola-container {
+			max-width: 800px;
+		}
+	}
+
 	@media #{$xmedium-only} {
 		.taboola-container {
-			max-width: 600px;
+			max-width: 700px;
 		}
 	}
 
@@ -303,7 +309,7 @@ article.post {
 
 	@media #{$small-only} {
 		.taboola-container {
-			max-width: 300px;
+			max-width: 100%;
 		}
 	}
 
